@@ -71,22 +71,22 @@ public class TicTacToe implements IGameLoader
 			String type = playerNames.get(name);
 			if (type.equals(HUMAN_PLAYER_TYPE) || type.equals(CLIENT_PLAYER_TYPE))
 			{
-				TicTacToePlayer player = new TicTacToePlayer(name);
+				TicTacToePlayer player = new TicTacToePlayer(name, type);
 				players.add(player);
 			}
 			else if (type.equals(RANDOM_COMPUTER_PLAYER_TYPE))
 			{
-				RandomAI ai = new RandomAI(name);
+				RandomAI ai = new RandomAI(name, type);
 				players.add(ai);
 			}
 			else if (type.equals(MINIMAX_COMPUTER_PLAYER_TYPE))
 			{
-				BetterAI ai = new BetterAI(name, BetterAI.Algorithm.MINIMAX);
+				BetterAI ai = new BetterAI(name, type, BetterAI.Algorithm.MINIMAX);
 				players.add(ai);
 			}
 			else if (type.equals(ALPHABETA_COMPUTER_PLAYER_TYPE))
 			{
-				BetterAI ai = new BetterAI(name, BetterAI.Algorithm.ALPHABETA);
+				BetterAI ai = new BetterAI(name, type, BetterAI.Algorithm.ALPHABETA);
 				players.add(ai);
 			}
 			else
